# K-Dots

./: .bashrc  .gitignore  README.md  install  install.sh  new.sh  rxfetch
.Config/Neofetch/: Beep.txt  BunnyShow.txt  Island.txt  config.conf
Artix-Stuff/: .bashrc
Artix-Stuff/Nerdfonts/: readme.md
Cfg/Kitty/: kitty.conf
Cfg/Neofetch/: Bug.txt  Dream.txt  OWOSwirly.txt
Color-Schemes/: SnowDark.colors
Firefox/Chrome-Oneline/: userContent.css
Fonts/Wings/: demo.html  selection.json  style.css
Gtk-Theme/SnowGtk/: Makefile  index.theme
Plasma-Style/Snow-Lyra/: colors  metadata.desktop
Plasma-Style/Snow2/: metadata.desktop
ST/: config.def.h  st  st.h
ST-Snow/: Makefile.orig  config.h
ST/New(Snow)/: Makefile  st  st.c
ST/Old/: x.c.orig
ST2/: config.mk  st
aurorae/: README.txt
clock-applet/: .travis.yml  INSTALL
color-schemes/: Havana-Dark.colors  Mori Dark.colors  MoriDark.colors  Nitrux.colors  NitruxDark.colors  NitruxMix.colors  Snow-Dark.colors  Tsuki.colors
config/: betterlockscreenrc  starship.toml
dwm-st/: x.c
grub/: euro.pf2  grub-check-signatures  grub-mkconfig_lib  widthspec.h
home/: .zshrc  katerc
konsole/: Nitrux.colorscheme  Nitrux.profile
kstyle/: .gitignore  README.md
kstyle-theme/: .travis.yml  CMakeLists.txt  INSTALL  gh-build.sh
plasmoids/clock-applet/: CMakeLists.txt  README.md
plasmoids/clock-applet/package/contents/ui/weather/: FiveDaysView.qml  Notice.qml  WeatherListView.qml
window-deco/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  CMakeLists.txt.user.f88106a  NomadDeco.kdev4  README.md  assets.qrc  breeze.json  breezebutton.cpp  breezebutton.h  breezedecoration.cpp  breezedecoration.h  breezeexceptionlist.cpp  breezesettingsdata.kcfg
window-deco/libbreezecommon/: CMakeLists.txt
(+517 files in other folders)
